# roblox-studio-utils

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yaml
examples/: find_paths.rs  open_file.rs  open_online_place.rs  start_client.rs  start_server.rs  start_server_with_clients.rs
lib/: lib.rs  opener.rs  result.rs  task.rs
lib/paths/: linux.rs  macos.rs  mod.rs  windows.rs
